--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
             <!-- Banner -->
             <section id="banner">
+                <img src="assets/img/Hero banner image.png" alt="Woman Reading a book and Looking interested">
                 <div class="inner">
                     <!-- Nav -->
                     <nav id="#">
                         <!-- <img src="" alt=""> Add gradient of the base blue color  -->
                         <div class="#">
                             <ul class="#">
-                                <li><a href="#"><img src="#" alt="Bookr Logo"></a></li>
+                                <li><a href="#" class="font-logo">Bookr</a></li>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Sign In</a></li>
                                 <li><a href="#">Sign Up</a></li>
@@ -59,7 +60,7 @@
             <section>
                 <div>
                     <div>
-                        <img src="#" alt="Girl reading a book while leaning backwards">
+                        <img src="assets/img/Read Reviews Image.png" alt="Girl reading a book while leaning backwards">
                         <h2>Read Reviews</h2>
                     </div>
                     <div>
@@ -68,7 +69,7 @@
                 </div>
                 <div>
                     <div>
-                        <img src="#" alt="Girl reading a book while leaning backwards">
+                        <img src="assets/img/Write Reviews Image.png" alt="Girl reading a book while leaning backwards">
                         <h2>Write Reviews</h2>
                     </div>
                     <div>
@@ -77,7 +78,7 @@
                 </div>
                 <div>
                     <div>
-                        <img src="#" alt="Girl reading a book while leaning backwards">
+                        <img src="assets/img/Connect Image.png" alt="Girl reading a book while leaning backwards">
                         <h2>Connect on Social</h2>
                     </div>
                     <div>
@@ -85,14 +86,19 @@
                     </div>
                 </div>
             </section>
-             <!-- Upper Section 3, Shows the target Audiance giving reviews that push the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
+            <!-- Upper Section 3, Shows the target Audiance giving reviews that push the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
             <section>
                 <!-- Another Three card section with different style content -->
                 <h2>What people think</h2>
                 <div>
                     <div>
-                        <h3>Marina K.</h3>
-                        <h2>5th Grade Teacher</h2>
+                        <div>
+                            <img src="assets/img/Marina Picture.png" alt="">
+                        </div>
+                        <div>
+                            <h3>Marina K.</h3>
+                            <h2>5th Grade Teacher</h2>
+                        </div>
                         <div>
                             <p>Before I found Bookr, I had to read through every textbook the district selected myself.
                                 Now
@@ -100,8 +106,13 @@
                         </div>
                     </div>
                     <div>
-                        <h3>John B.</h3>
-                        <h2>12th Grade Teacher</h2>
+                        <div>
+                            <img src="assets/img/John Image.png" alt="">
+                        </div>
+                        <div>
+                            <h3>John B.</h3>
+                            <h2>12th Grade Teacher</h2>
+                        </div>
                         <div>
                             <p>I always want something better for my students, but I never felt like I had the time to
                                 investigate new books properly. Now I can get other teachers' opinions before I even
@@ -109,8 +120,13 @@
                         </div>
                     </div>
                     <div>
-                        <h3>Julia M.</h3>
-                        <h2>College Student</h2>
+                        <div>
+                            <img src="assets/img/Julia Image.png" alt="">
+                        </div>
+                        <div>
+                            <h3>Julia M.</h3>
+                            <h2>College Student</h2>
+                        </div>
                         <div>
                             <p>A friend recommended this app to me, and I cannot stress how thankful I am! Now, before I
                                 enroll in a class, I can see what other students and teachers think of the book before I
@@ -119,7 +135,7 @@
                     </div>
                 </div>
             </section>
-             <!-- Call to Action -->
+            <!-- Call to Action -->
             <section>
                 <p>Create an account and never miss the next big book in education again!</p>
                 <button>Sign Up for free</button>
@@ -139,7 +155,7 @@
         <!-- Copyright -->
         <section class="wrapper style2 copyright">
             <div class="inner">
-               <p> &copy;2019 Bookr</p>
+                <p> &copy;2019 Bookr</p>
                 <p>Terms of Service</p>
                 <p>Private Policy</p>
             </div>
