--- a/index.html
+++ b/index.html
@@ -1,201 +1,213 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Bookr</title>
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
+  </head>
 
-<head>
-  <title>Bookr</title>
-  <link rel="icon" href="./favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
-</head>
-
-<body>
-  <!-- Page wrapper -->
-  <div id="page-wrapper">
-    <!-- Header -->
-    <header id="header" class="alt">
-      <!-- Banner -->
-      <section>
-        <div class="inner banner">
-          <!-- Nav -->
-          <nav class="nav">
-            <!-- <img src="" alt=""> Add gradient of the base blue color  -->
-            <a href="#" class="font-logo">Bookr</a>
-            <ul class="#">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Sign In</a></li>
-              <li><a href="#">Sign Up</a></li>
-            </ul>
-          </nav>
-          <div>
-            <!-- Figure out the horizontal triangle image. -->
+  <body>
+    <!-- Page wrapper -->
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <!-- Banner -->
+        <section>
+          <div class="inner banner">
+            <!-- Nav -->
+            <nav class="nav">
+              <!-- <img src="" alt=""> Add gradient of the base blue color  -->
+              <a href="#" class="font-logo">Bookr</a>
+              <ul class="#">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Sign Up</a></li>
+              </ul>
+            </nav>
+            <div>
+              <!-- Figure out the horizontal triangle image. -->
+            </div>
+            <section class="header-content">
+              <div class="h-top">
+                <h1>Be the future of education</h1>
+                <p>
+                  Review the textbooks<br />
+                  of tomorrow
+                </p>
+              </div>
+              <div class="h-bottom">
+                <button>Sign up!</button>
+              </div>
+            </section>
           </div>
-          <section class="header-content">
-            <div class="h-top">
-              <h1>Be the future of education</h1>
+        </section>
+      </header>
+      <!-- Main -->
+      <section>
+        <!-- Upper Section 1, Explains what the App/Web App is and what it does -->
+        <section>
+          <!-- This section will have the first info blurb, be sure to style the line thing -->
+          <div class="below-header">
+            <h2>
+              We know how hard it is to find<br />
+              good educational materials.
+            </h2>
+            <p>
+              At Bookr, you can read and <br />create reviews and ratings so<br />
+              you'll always find the best books.
+            </p>
+          </div>
+        </section>
+        <!-- Upper Section 2, Break down of the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
+        <section>
+          <div class="card_top">
+            <div class="img_1">
+              <h2>Read Reviews</h2>
+            </div>
+            <div class="blue">
               <p>
-                Review the textbooks<br />
-                of tomorrow
+                Decide which textbook to invest in by reading reviews by real
+                teachers and students
               </p>
             </div>
-            <div class="h-bottom">
-              <button>Sign up!</button>
+          </div>
+          <div class="black_line"></div>
+          <div class="card_top">
+            <div class="img_2">
+              <h2>Write Reviews</h2>
             </div>
-          </section>
-        </div>
-      </section>
-    </header>
-    <!-- Main -->
-    <section>
-      <!-- Upper Section 1, Explains what the App/Web App is and what it does -->
-      <section>
-        <!-- This section will have the first info blurb, be sure to style the line thing -->
-        <div class="below-header">
-          <h2>
-            We know how hard it is to find<br />
-            good educational materials.
-          </h2>
+            <div class="blue">
+              <p>
+                Share your opinions on your favorite books and help your
+                academic community grow
+              </p>
+            </div>
+          </div>
+          <div class="black_line"></div>
+          <div class="card_top">
+            <div class="img_3">
+              <h2>Connect on Social</h2>
+            </div>
+            <div class="blue">
+              <p>
+                Join Bookr Premium to post updates, share lessons plans, and
+                create book lists
+              </p>
+            </div>
+          </div>
+          <div class="black_line"></div>
+        </section>
+        <!-- Upper Section 3, Shows the target Audiance giving reviews that push the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
+        <section>
+          <!-- Another Three card section with different style content -->
+          <h2>What people think</h2>
+          <div>
+            <div>
+              <div class="parent">
+                <div>
+                  <img src="assets/img/Marina-Picture.png" alt="" />
+                </div>
+                <div>
+                  <h3>Marina K.</h3>
+                  <h2>5th Grade Teacher</h2>
+                </div>
+              </div>
+              <div>
+                <p>
+                  Before I found Bookr, I had to read through every textbook the
+                  district selected myself. Now I can look up my book on the app
+                  before I even have to crack the spine!
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="parent">
+                <div>
+                  <img src="assets/img/John-Image.png" alt="" />
+                </div>
+                <div>
+                  <h3>John B.</h3>
+                  <h2>12th Grade Teacher</h2>
+                </div>
+              </div>
+              <div>
+                <p>
+                  I always want something better for my students, but I never
+                  felt like I had the time to investigate new books properly.
+                  Now I can get other teachers' opinions before I even have to
+                  assign a book.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="parent">
+                <div>
+                  <img src="assets/img/Julia-Image.png" alt="" />
+                </div>
+                <div>
+                  <h3>Julia M.</h3>
+                  <h2>College Student</h2>
+                </div>
+              </div>
+              <div>
+                <p>
+                  A friend recommended this app to me, and I cannot stress how
+                  thankful I am! Now, before I enroll in a class, I can see what
+                  other students and teachers think of the book before I make a
+                  big investment.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Call to Action -->
+        <section>
           <p>
-            At Bookr, you can read and <br />create reviews and ratings so<br />
-            you'll always find the best books.
+            Create an account and never miss the next big book in education
+            again!
           </p>
+          <button>Sign Up for free</button>
+        </section>
+      </section>
+
+      <!-- Footer -->
+      <section id="footer" class="wrapper">
+        <ul class="#">
+          <li>
+            <a href="#" class="#"
+              ><span class="#">twitter.com/untitled</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="#"
+              ><span class="#">facebook.com/untitled</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="#"
+              ><span class="#">instagram.com/untitled</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="#"
+              ><span class="#">contact@untitled.tld</span></a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <!-- Copyright -->
+      <section class="wrapper style2 copyright">
+        <div class="inner">
+          <p>&copy;2019 Bookr</p>
+          <p>Terms of Service</p>
+          <p>Private Policy</p>
         </div>
       </section>
-      <!-- Upper Section 2, Break down of the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
-      <section>
-        <div class="card_top">
-          <div class="img_1">
-            <h2>Read Reviews</h2>
-          </div>
-          <div class="blue">
-            <p>
-              Decide which textbook to invest in by reading reviews by real
-              teachers and students
-            </p>
-          </div>
-        </div>
-        <div class="black_line"></div>
-        <div class="card_top">
-          <div class="img_2">
-            <h2>Write Reviews</h2>
-          </div>
-          <div class="blue">
-            <p>
-              Share your opinions on your favorite books and help your
-              academic community grow
-            </p>
-          </div>
-        </div>
-        <div class="black_line"></div>
-        <div class="card_top">
-          <div class="img_3">
-            <h2>Connect on Social</h2>
-          </div>
-          <div class="blue">
-            <p>
-              Join Bookr Premium to post updates, share lessons plans, and
-              create book lists
-            </p>
-          </div>
-        </div>
-        <div class="black_line"></div>
-      </section>
-      <!-- Upper Section 3, Shows the target Audiance giving reviews that push the three main goals of the app, Read Reviews, Write Reviews, Connect on Social  -->
-      <section>
-        <!-- Another Three card section with different style content -->
-        <h2>What people think</h2>
-        <div>
-          <div>
-            <div>
-              <img src="/assets/img/Marina-Picture.png" alt="" />
-            </div>
-            <div>
-              <h3>Marina K.</h3>
-              <h2>5th Grade Teacher</h2>
-            </div>
-            <div>
-              <p>
-                Before I found Bookr, I had to read through every textbook the
-                district selected myself. Now I can look up my book on the app
-                before I even have to crack the spine!
-              </p>
-            </div>
-          </div>
-          <div>
-            <div>
-              <img src="assets/img/John Image.png" alt="" />
-            </div>
-            <div>
-              <h3>John B.</h3>
-              <h2>12th Grade Teacher</h2>
-            </div>
-            <div>
-              <p>
-                I always want something better for my students, but I never
-                felt like I had the time to investigate new books properly.
-                Now I can get other teachers' opinions before I even have to
-                assign a book.
-              </p>
-            </div>
-          </div>
-          <div>
-            <div>
-              <img src="assets/img/Julia Image.png" alt="" />
-            </div>
-            <div>
-              <h3>Julia M.</h3>
-              <h2>College Student</h2>
-            </div>
-            <div>
-              <p>
-                A friend recommended this app to me, and I cannot stress how
-                thankful I am! Now, before I enroll in a class, I can see what
-                other students and teachers think of the book before I make a
-                big investment.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Call to Action -->
-      <section>
-        <p>
-          Create an account and never miss the next big book in education
-          again!
-        </p>
-        <button>Sign Up for free</button>
-      </section>
-    </section>
+    </div>
 
-    <!-- Footer -->
-    <section id="footer" class="wrapper">
-      <ul class="#">
-        <li>
-          <a href="#" class="#"><span class="#">twitter.com/untitled</span></a>
-        </li>
-        <li>
-          <a href="#" class="#"><span class="#">facebook.com/untitled</span></a>
-        </li>
-        <li>
-          <a href="#" class="#"><span class="#">instagram.com/untitled</span></a>
-        </li>
-        <li>
-          <a href="#" class="#"><span class="#">contact@untitled.tld</span></a>
-        </li>
-      </ul>
-    </section>
-
-    <!-- Copyright -->
-    <section class="wrapper style2 copyright">
-      <div class="inner">
-        <p>&copy;2019 Bookr</p>
-        <p>Terms of Service</p>
-        <p>Private Policy</p>
-      </div>
-    </section>
-  </div>
-
-  <!-- Scripts -->
-  <script src="#"></script>
-  <script src="#"></script>
-</body>
-
+    <!-- Scripts -->
+    <script src="#"></script>
+    <script src="#"></script>
+  </body>
 </html>
