Added the about page, about to start work on the javascript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- <img src="" alt=""> Add gradient of the base blue color  -->
             <a href="#" class="font-logo">Bookr</a>
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="#">Sign In</a></li>
               <li><a href="#">Sign Up</a></li>
             </ul>
