Final commit of the day. Refactored several lines of code to reduce.

--- a/about.html
+++ b/about.html
@@ -248,11 +248,10 @@
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every
-                                        textbook the
-                                        district selected myself. Now I can look up my book
-                                        on the app
-                                        before I even have to crack the spine!
+                                        I failed to get any information to my team in time because I was so hard at
+                                        work.
+                                        UI developer Tim has taken the liberty of filling in some information here so
+                                        that it isn't left with fake filler text.
 
                                     </p>
                                 </div>
@@ -325,9 +324,9 @@
                             </div>
                             <div>
                                 <p>
-                                    Before I found Bookr, I had to read through every textbook the
-                                    district selected myself. Now I can look up my book on the app
-                                    before I even have to crack the spine!
+                                    I have been helping out all parts of the team as they needed me, trying not to get
+                                    in the way or push anyone into a
+                                    certain direction.
                                 </p>
                             </div>
                         </div>
